# microsoft-hermes-windows

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  guardian_baselines.gdnbaselines  merged-hermes-revision.txt  sync-config.json
API/: CMakeLists.txt
API/hermes/: CMakeLists.txt  SynthTrace.cpp  SynthTrace.h  TimerStats.cpp  TraceInterpreter.cpp  TracingRuntime.cpp  TracingRuntime.h  hermes.cpp  hermes.h
API/hermes/cdp/: CMakeLists.txt
API/hermes_node_api/: CMakeLists.txt  README.md  hermes_node_api.cpp  hermes_node_api.h  hermes_win.cpp
API/hermes_node_api/node_api/: CMakeLists.txt
API/hermes_node_api_jsi/: CMakeLists.txt  NodeApiJsiRuntime.cpp
API/hermes_node_api_jsi/ApiLoaders/: HermesApi.cpp  HermesApi.h  HermesApi.inc  JSRuntimeApi.inc
API/hermes_shared/: CMakeLists.txt  MurmurHash.h  hermes_api.cpp  hermes_api.h  hermes_napi.cpp  hermes_win.cpp  hermes_win.h  js_runtime_api.h  version.rc.in
API/hermes_shared/inspector/: CMakeLists.txt  InspectorProxy.cpp  version.rc.in
API/hermes_shared/inspector/boost/: CMakeLists.txt
API/hermes_shared/inspector/react-native/: CMakeLists.txt
API/hermes_shared/inspector/react-native-0.72/: CMakeLists.txt
API/hermes_shared/inspector/react-native/overrides/: HermesRuntimeAgentDelegate.cpp
API/hermes_shared/node-api/: CMakeLists.txt
API/jsi/jsi/: README.md  decorator.h  jsi-inl.h  jsi.cpp  jsi.h
API/jsi/jsi/test/: testlib.cpp  testlib_ext.cpp
unittests/NodeAPI/js-native-api/6_object_wrap/: CMakeLists.txt
unittests/NodeAPI/js-native-api/test_cannot_run_js/: CMakeLists.txt
unittests/NodeApi/: CMakeLists.txt  child_process_mac.cpp  compat.h  hermes_api.cpp  js_runtime_api.h  node_api_test.cpp  node_api_test.h  node_lite.cpp  node_lite.h  node_lite_hermes.cpp  node_lite_windows.cpp  string_utils.cpp  string_utils.h  test_2_function_arguments.cpp  test_4_object_factory.cpp  test_5_function_factory.cpp  test_6_object_wrap.cpp  test_8_passing_wrapped.cpp  test_basics.cpp  test_constructor.cpp  test_conversions.cpp  test_dataview.cpp  test_date.cpp  test_error.cpp  test_exception.cpp  test_ext.cpp  test_general.cpp  test_handle_scope.cpp  test_main.cpp  test_new_target.cpp  test_number.cpp  test_object.cpp  test_promise.cpp  test_reference.cpp  test_string.cpp  test_symbol.cpp  test_typedarray.cpp
unittests/NodeApi/js/: CMakeLists.txt
unittests/NodeApi/js-native-api/6_object_wrap/: myobject.h
unittests/NodeApi/js-native-api/test_exception/: test_exception.c
unittests/NodeApi/js-native-api/test_finalizer/: binding.gyp  test.js
unittests/NodeApi/js-native-api/test_function/: test_function.c
unittests/NodeApi/js-native-api/test_general/: test_general.c
unittests/NodeApi/js-native-api/test_new_target/: binding.c
unittests/NodeApi/test/: CMakeLists.txt  babel.config.js  package.json
unittests/NodeApi/test/basics/: async_rejected.js  async_resolved.js  mustcall_failure.js  mustcall_success.js  mustnotcall_failure.js  mustnotcall_success.js
unittests/NodeApi/test/common/: assert.js  gc.js  index.js
unittests/NodeApi/test/js-native-api/: CMakeLists.txt  common-inl.h  common.h
unittests/NodeApi/test/js-native-api/2_function_arguments/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/3_callbacks/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/4_object_factory/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/5_function_factory/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/6_object_wrap/: CMakeLists.txt  test.js
unittests/NodeApi/test/js-native-api/7_factory_wrap/: CMakeLists.txt  myobject.h
unittests/NodeApi/test/js-native-api/8_passing_wrapped/: CMakeLists.txt  myobject.h
unittests/NodeApi/test/js-native-api/test_array/: CMakeLists.txt  test.js
unittests/NodeApi/test/js-native-api/test_bigint/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_cannot_run_js/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_constructor/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_conversions/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_dataview/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_date/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_error/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_exception/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_finalizer/: CMakeLists.txt  test_fatal_finalize.js  test_finalizer.c
unittests/NodeApi/test/js-native-api/test_function/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_general/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_handle_scope/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_instance_data/: CMakeLists.txt  test.js
unittests/NodeApi/test/js-native-api/test_new_target/: CMakeLists.txt  test_new_target.c
unittests/NodeApi/test/js-native-api/test_number/: CMakeLists.txt
unittests/NodeApi/test/js-native-api/test_object/: CMakeLists.txt  test.js
unittests/NodeApi/test/js-native-api/test_promise/: CMakeLists.txt
unittests/node-api/: CMakeLists.txt  node_api_test.h  node_api_test_hermes.cpp  test_3_callbacks.cpp  test_7_factory_wrap.cpp  test_assert.cpp  test_basics.cpp  test_finalizer.cpp  test_function.cpp  test_instance_data.cpp  test_properties.cpp
unittests/node-api/js/: CMakeLists.txt  babel.config.js  package.json
unittests/node-api/js-native-api/: common.h
unittests/node-api/js-native-api/6_object_wrap/: myobject.cc
unittests/node-api/js-native-api/7_factory_wrap/: myobject.cc
unittests/node-api/js-native-api/8_passing_wrapped/: myobject.cc
unittests/node-api/js-native-api/common/: assert.js
unittests/node-api/js-native-api/test_finalizer/: test_finalizer.c
unittests/node-api/js-native-api/test_general/: test.js
unittests/node-api/js-native-api/test_instance_data/: test_instance_data.c
unittests/node-api/js-native-api/test_reference/: test_reference.c
unittests/node-api/js-native-api/test_reference_double_free/: test_reference_double_free.c
unittests/node-api/js-native-api/test_typedarray/: test_typedarray.c
(+153 files in other folders)
