# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

add_subdirectory(hermes)
add_subdirectory(hermes_abi)
add_subdirectory(hermes_sandbox)
add_subdirectory(hermes_shared)
add_subdirectory(hermes_node_api_jsi)
